fixed logo on menu collapse

--- a/src/app/scss/_icons.scss
+++ b/src/app/scss/_icons.scss
@@ -45,14 +45,12 @@
   cursor: pointer;
 }
 
-
-.home-logo .company-logo {
+.company-logo {
   background-image: url(/assets/tenants/companylogo.svg);
 }
 .home-logo .company-logo.ciena {
   background-image: url(/assets/tenants/ciena-logo.svg);
 }
-
 
 .top-navigation-block .notifications .icon {
   background-image: url(/assets/icons/notification.svg);
