--- a/src/styles.scss
+++ b/src/styles.scss
@@ -720,6 +720,16 @@ h4 {
   }
 }
 
+.header.collapse .company-logo {
+  width: 80px;
+  margin-right: 20px;
+  display: inline-block;
+  background-position: left;
+}
+.mobile-breadcrumb .company-logo {
+  width: 100%;
+}
+
 @media (max-width: 500px) {
   .card-title-buttons {
     display: none;
